Added groups selection in user admin.
